--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,7 @@ html, body {
 }
 
 .menu li>a:hover {
-    color: midnightblue;
+    color: #00ad79;
 
 }
 
@@ -204,7 +204,8 @@ main {
   }
 
   #logo {
-    width: 300px;
+    width: 250px;
+    margin-left: 1.8rem;
   }
 
 }
