--- a/styles/snow.css
+++ b/styles/snow.css
@@ -78,6 +78,11 @@ table#wf-table a {
     height: 30px;
     line-height: 30px;
     -moz-border-radius: 7px 7px 0px 0px;
+    border-top-left-radius: 7px;
+    /* Saf3-4 */
+    border-top-right-radius: 7px;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;
     /* FF1+ */
     -webkit-border-top-left-radius: 7px;
     /* Saf3-4 */
