--- a/styles/style.css
+++ b/styles/style.css
@@ -189,6 +189,68 @@ main {
   padding: 0 1rem;
 }
 
+
+#contact {
+  width: 100%;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#contact a {
+  text-decoration: none;
+  color: white;
+}
+
+#contact a:hover {
+  color: #00ad79;
+}
+
+.card {
+  width: 280px;
+  height: 80px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 10px;
+  background-color: #00009d;
+  padding: 0.5rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border: 2px solid #0000FF;
+}
+
+.card p {
+  width: 163px;
+  text-align: center;
+}
+
+.card-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+  height: 60px;
+  border-radius: 10px;
+  background-color: white;
+  border: 2px solid #0000FF;
+}
+
+.fa-brands, .fab {
+  font-weight: bold;
+  color: #25D366;
+  text-align: center;
+}
+
+.fa-solid, .fas {
+  color: #00009d;
+}
+
+#at {
+  color: orangered;
+}
+
 @media (min-width: 700px) {
 
   #clima>p {
